Kubernetes Projects/Monitoring System/Node, Nginx, cAdvisor Monitoring Using Prometheus & Grafana/Nginx-Ingress-Controller/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-svc
            port:
              number: 80
